comments out nav that is currently uncessary, and fixes some spacing for the hero

--- a/main.less
+++ b/main.less
@@ -58,11 +58,6 @@ div.panel {
   background: @nav-background-color;
 }
 
-
-div#main-background-content {
-  margin-top: 50px;
-}
-
 section#hero-container {
   background: #222222;
   position: relative;
@@ -99,17 +94,10 @@ section#hero-container {
     background-attachment: scroll;
     background-size: cover;
     background-position: 20% 50%;
-    min-height: 500px;
+    min-height: 50px;
   }
 }
 section#below-hero-container {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
-footer#main-footer {
-  background: White;
-  padding-top: 30px;
-  min-height: 400px;
-}
-
